Split out an xdg-desktop-portal-dev package

--- a/debian/control
+++ b/debian/control
@@ -40,3 +40,20 @@ Description: desktop integration portal for Flatpak
  xdg-desktop-portal is designed to be desktop-agnostic, and uses a
  desktop-environment-specific GUI backend such as xdg-desktop-portal-gtk
  to provide its functionality.
+
+Package: xdg-desktop-portal-dev
+Architecture: linux-any
+Multi-arch: foreign
+Depends:
+ ${misc:Depends},
+ ${shlibs:Depends},
+Description: desktop integration portal for Flatpak - development files
+ xdg-desktop-portal provides a portal frontend service for Flatpak, and
+ possibly other desktop containment/sandboxing frameworks. This service
+ is made available to the sandboxed application, and provides mediated
+ D-Bus interfaces for file access, URI opening, printing and similar
+ desktop integration features. See the xdg-desktop-portal package's
+ description for more details.
+ .
+ This package contains development files for backends such as
+ xdg-desktop-portal-gtk.
