--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,7 @@ include /usr/share/dpkg/default.mk
 override_dh_auto_configure:
 	dh_auto_configure -- \
 		--enable-docbook-docs \
+		--libdir=/usr/lib \
 		--libexecdir=/usr/lib/$(DEB_SOURCE) \
 		$(NULL)
 
