--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends:
  libflatpak-dev (>= 0.6.10),
  libglib2.0-dev,
  xmlto,
+Rules-Requires-Root: no
 Standards-Version: 3.9.8
 Homepage: http://flatpak.org/
 Vcs-Git: https://anonscm.debian.org/git/collab-maint/xdg-desktop-portal.git
