Disable Pipewire support for now (ITP: #874089)

--- a/debian/rules
+++ b/debian/rules
@@ -10,6 +10,7 @@ include /usr/share/dpkg/default.mk
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
+		--disable-pipewire \
 		--enable-docbook-docs \
 		--libexecdir=/usr/lib/$(DEB_SOURCE) \
 		$(NULL)
