--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,7 @@ override_dh_auto_configure:
 	dh_auto_configure -- \
 		--disable-pipewire \
 		--enable-docbook-docs \
+		--enable-installed-tests \
 		--libexecdir=/usr/lib/$(DEB_SOURCE) \
 		$(NULL)
 
