--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Architecture: linux-any
 Multi-arch: foreign
 Depends:
  default-dbus-session-bus | dbus-session-bus,
+ fuse,
  ${misc:Depends},
  ${shlibs:Depends},
 Breaks:
