Use dh_missing --fail-missing instead of dh_install --fail-missing

--- a/debian/rules
+++ b/debian/rules
@@ -16,5 +16,5 @@ override_dh_auto_configure:
 		--libexecdir=/usr/lib/$(DEB_SOURCE) \
 		$(NULL)
 
-override_dh_install:
-	dh_install --fail-missing
+override_dh_missing:
+	dh_missing --fail-missing
