--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends:
  xmlto,
 Rules-Requires-Root: no
 Standards-Version: 4.1.4
-Homepage: http://flatpak.org/
+Homepage: https://github.com/flatpak/xdg-desktop-portal
 Vcs-Git: https://salsa.debian.org/debian/xdg-desktop-portal.git
 Vcs-Browser: https://salsa.debian.org/debian/xdg-desktop-portal
 
