--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends:
  dbus,
  debhelper (>= 10),
  fuse <!nocheck>,
+ libflatpak-dev,
  libfontconfig1-dev,
  libfuse-dev,
  libglib2.0-dev,
