--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -2,6 +2,6 @@
 pristine-tar = True
 compression = xz
 debian-branch = debian/master
-upstream-branch = upstream/latest
+upstream-branch = upstream/1.0.x
 patch-numbers = False
 upstream-vcs-tag = %(version)s
