--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,7 @@ include /usr/share/dpkg/default.mk
 
 override_dh_auto_configure:
 	dh_auto_configure -- \
+		--disable-geoclue \
 		--disable-pipewire \
 		--enable-docbook-docs \
 		--enable-installed-tests \
