--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends:
 Rules-Requires-Root: no
 Standards-Version: 4.2.1
 Homepage: https://github.com/flatpak/xdg-desktop-portal
-Vcs-Git: https://salsa.debian.org/debian/xdg-desktop-portal.git
+Vcs-Git: https://salsa.debian.org/debian/xdg-desktop-portal.git -b debian/experimental
 Vcs-Browser: https://salsa.debian.org/debian/xdg-desktop-portal
 
 Package: xdg-desktop-portal
