--- a/debian/control
+++ b/debian/control
@@ -19,7 +19,7 @@ Build-Depends:
 Rules-Requires-Root: no
 Standards-Version: 4.3.0
 Homepage: https://github.com/flatpak/xdg-desktop-portal
-Vcs-Git: https://salsa.debian.org/debian/xdg-desktop-portal.git -b debian/experimental
+Vcs-Git: https://salsa.debian.org/debian/xdg-desktop-portal.git
 Vcs-Browser: https://salsa.debian.org/debian/xdg-desktop-portal
 
 Package: xdg-desktop-portal
