--- a/debian/rules
+++ b/debian/rules
@@ -6,13 +6,6 @@ export LC_ALL=C.UTF-8
 
 include /usr/share/dpkg/default.mk
 
-# pipewire is not in Ubuntu main yet https://launchpad.net/bugs/1802533
-ifeq ($(shell dpkg-vendor --query vendor),Ubuntu)
-	CONFFLAGS += --disable-pipewire
-else
-	CONFFLAGS += --enable-pipewire
-endif
-
 %:
 	dh $@
 
@@ -22,7 +15,7 @@ override_dh_auto_configure:
 		--enable-geoclue \
 		--enable-installed-tests \
 		--libexecdir=/usr/libexec \
-		$(CONFFLAGS)
+		--disable-pipewire \
 		$(NULL)
 
 override_dh_missing:
