Mark autopkgtest as flaky due to #931726

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,5 +1,5 @@
 Tests: gnome-desktop-testing
-Restrictions: isolation-machine
+Restrictions: flaky, isolation-machine
 Depends:
  gnome-desktop-testing,
  xdg-desktop-portal-tests,
