Re-enable pipewire (screen recording) support
This reverts commit 6dc8449c39051f4509dae487169350570d57f299.

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends:
  libfuse-dev,
  libglib2.0-dev,
  libjson-glib-dev,
+ libpipewire-0.2-dev (>= 0.2.7),
  xmlto,
 Rules-Requires-Root: no
 Standards-Version: 4.4.1
