--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Uploaders:
 Build-Depends:
  dbus,
  debhelper-compat (= 12),
+ geoclue-2.0 <!nocheck> <pkg.libportal.enable>,
  fuse <!nocheck>,
  libgdk-pixbuf2.0-dev,
  libgeoclue-2-dev (>= 2.5.2),
@@ -17,6 +18,7 @@ Build-Depends:
  libjson-glib-dev,
  libpipewire-0.2-dev (>= 0.2.7),
  libportal-dev (>= 0.3) <pkg.libportal.enable>,
+ pipewire (>= 0.2.7) <!nocheck> <pkg.libportal.enable>,
  xmlto,
 Rules-Requires-Root: no
 Standards-Version: 4.4.1
@@ -81,6 +83,9 @@ Description: desktop integration portal - development files
 Package: xdg-desktop-portal-tests
 Architecture: any
 Depends:
+ dbus,
+ geoclue-2.0,
+ pipewire,
  xdg-desktop-portal,
  ${misc:Depends},
  ${shlibs:Depends},
