--- a/debian/rules
+++ b/debian/rules
@@ -33,3 +33,10 @@ override_dh_auto_configure:
 
 override_dh_missing:
 	dh_missing --fail-missing
+
+override_dh_auto_test:
+ifeq ($(filter nocheck,$(DEB_BUILD_OPTIONS)),)
+	G_MESSAGES_DEBUG=all \
+	TEST_IN_CI=1 \
+	dh_auto_test --no-parallel
+endif
