--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Build-Depends:
 Rules-Requires-Root: no
 Standards-Version: 4.4.1
 Homepage: https://github.com/flatpak/xdg-desktop-portal
-Vcs-Git: https://salsa.debian.org/debian/xdg-desktop-portal.git -b debian/experimental
+Vcs-Git: https://salsa.debian.org/debian/xdg-desktop-portal.git
 Vcs-Browser: https://salsa.debian.org/debian/xdg-desktop-portal
 
 Package: xdg-desktop-portal
