--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 pristine-tar = True
 compression = xz
-debian-branch = debian/master
-upstream-branch = upstream/1.6.x
+debian-branch = debian/experimental
+upstream-branch = upstream/latest
 patch-numbers = False
 upstream-vcs-tag = %(version)s
