Re-enable pipewire now that 0.3.x is in experimental
This reverts commit 53d1d20077e3efc349c17f67f0591452ec8313e1.

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,9 @@ Build-Depends:
  libfuse-dev,
  libglib2.0-dev,
  libjson-glib-dev,
+ libpipewire-0.3-dev (>= 0.3.10),
  libportal-dev (>= 0.3) <pkg.libportal.enable>,
+ pipewire (>= 0.3.10) <!nocheck pkg.libportal.enable>,
  procps <!nocheck>,
  python3 <!nocheck>,
  python3-gi <!nocheck>,
@@ -88,6 +90,7 @@ Depends:
  dbus,
  geoclue-2.0,
  libcap2-bin,
+ pipewire (>= 0.3.10),
  procps,
  python3,
  python3-gi,
