--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends:
  libcap2-bin <!nocheck>,
  libgdk-pixbuf2.0-dev,
  libgeoclue-2-dev (>= 2.5.2),
- libflatpak-dev,
+ libflatpak-dev (>= 1.5.0),
  libfontconfig1-dev,
  libfuse-dev,
  libglib2.0-dev,
