Preferentially build-depend on libgdk-pixbuf-2.0-dev
We don't need the deprecated Xlib integration that is also pulled in
by the older libgdk-pixbuf2.0-dev package (see #974870).

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends:
  geoclue-2.0 <!nocheck pkg.libportal.enable>,
  fuse <!nocheck>,
  libcap2-bin <!nocheck>,
- libgdk-pixbuf2.0-dev,
+ libgdk-pixbuf-2.0-dev | libgdk-pixbuf2.0-dev,
  libgeoclue-2-dev (>= 2.5.2),
  libflatpak-dev (>= 1.5.0),
  libfontconfig1-dev,
