Enable libportal now that it is available in testing

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Uploaders:
 Build-Depends:
  dbus,
  debhelper-compat (= 13),
- geoclue-2.0 <!nocheck pkg.libportal.enable>,
+ geoclue-2.0 <!nocheck>,
  fuse <!nocheck>,
  libcap2-bin <!nocheck>,
  libgdk-pixbuf-2.0-dev | libgdk-pixbuf2.0-dev,
@@ -17,8 +17,8 @@ Build-Depends:
  libglib2.0-dev,
  libjson-glib-dev,
  libpipewire-0.3-dev (>= 0.3.10),
- libportal-dev (>= 0.3) <pkg.libportal.enable>,
- pipewire (>= 0.3.10) <!nocheck pkg.libportal.enable>,
+ libportal-dev (>= 0.3),
+ pipewire (>= 0.3.10) <!nocheck>,
  procps <!nocheck>,
  python3 <!nocheck>,
  python3-gi <!nocheck>,
